[package]
name = "rust_rsa"
version = "0.1.0"
edition = "2021"

[lib]
name = "rsa"
path = "src/lib/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
num-bigint = { version = "0.4.3", features = ["rand"] }
num-integer = "0.1.45"
num-traits = "0.2.15"
rand = "0.8.5"
